# gameoflifetestbbb

./: CMakeLists.txt  build.sh  readme.md
hdr/: config.hpp  grid.hpp  main.hpp
src/: grid.cpp  main.cpp
